# proto-clickhouse

./: .gitignore  build_proto.py  cli.py  pyproject.toml
proto/project/: options.proto  player_segments.proto  tables.proto
proto/project/aggregations/: external_data.proto  install.proto
proto/project/events/: enter.proto
proto_builder/: cli.py
schema_migration/: cli.py  settings.py  table.py  utils.py  view.py
schema_migration/clickhouse_engines/: url.py
