[tool.poetry]
name = "proto-clickhouse"
version = "0.1.0"
description = "Proto definition of clickhouse schema"
authors = ["Alexey <zolotukhin89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.34.0"
grpcio-tools = "^1.34.0"
mypy-protobuf = "^1.23"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
